[gd_scene load_steps=19 format=3 uid="uid://cc280wqoegnrq"]

[ext_resource type="Script" path="res://Char1.gd" id="1_whs7d"]
[ext_resource type="Script" path="res://CollisionShape2D.gd" id="2_1dlhc"]
[ext_resource type="Texture2D" uid="uid://ct4cycx3oao7u" path="res://Asset de Kyun/Char1/Char1_right_walk1.png" id="2_s1stg"]
[ext_resource type="Texture2D" uid="uid://dft1l21quirg5" path="res://Asset de Kyun/Char1/Char1_down_walk1.png" id="3_pu1xa"]
[ext_resource type="Texture2D" uid="uid://beukrw7j55wvo" path="res://Asset de Kyun/Char1/Char1_left_walk1.png" id="4_rbj2d"]
[ext_resource type="Texture2D" uid="uid://bt66ggk03l46o" path="res://Asset de Kyun/Char1/Char1_left_walk2.png" id="5_i4tau"]
[ext_resource type="Texture2D" uid="uid://d32x20kjswuqa" path="res://Asset de Kyun/Char1/Char1_right_walk2.png" id="6_xqrhk"]
[ext_resource type="Texture2D" uid="uid://148ucxavg7vy" path="res://Asset de Kyun/Char1/Char1_up_walk1.png" id="7_3fbqb"]
[ext_resource type="Script" path="res://Area2D.gd" id="9_prmj0"]
[ext_resource type="Texture2D" uid="uid://c10w86o8myjc" path="res://Asset de Kyun/Char1/sword_down1.png" id="10_vijpd"]
[ext_resource type="Texture2D" uid="uid://bvt6qwypoc5y8" path="res://Asset de Kyun/Char1/sword_left1.png" id="11_6kw03"]
[ext_resource type="Texture2D" uid="uid://cu0qocjdlir20" path="res://Asset de Kyun/Char1/sword_right1.png" id="12_klplv"]
[ext_resource type="Texture2D" uid="uid://go208hgok8p4" path="res://Asset de Kyun/Char1/sword_up1.png" id="13_ernng"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5pnns"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_pu1xa")
}, {
"duration": 1.0,
"texture": ExtResource("2_s1stg")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rbj2d")
}, {
"duration": 1.0,
"texture": ExtResource("5_i4tau")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s1stg")
}, {
"duration": 1.0,
"texture": ExtResource("6_xqrhk")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rbj2d")
}, {
"duration": 1.0,
"texture": ExtResource("7_3fbqb")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dc2r3"]
size = Vector2(32, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ebxs"]
size = Vector2(14, 63.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_i0xve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_vijpd")
}],
"loop": true,
"name": &"down_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_6kw03")
}],
"loop": true,
"name": &"left_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_klplv")
}],
"loop": true,
"name": &"right_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_ernng")
}],
"loop": true,
"name": &"up_attack",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_3sbyk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -32, -21, 0, 0, 0, 0, -28, -28, 0, 0, 0, 0, -17, -39, 0, 0, 0, 0, -1, -42, 0, 0, 0, 0, 6, -40, 0, 0, 0, 0, 11, -39, 0, 0, 0, 0, 18, -35, 0, 0, 0, 0, 26, -27, 0, 0, 0, 0, 33, -17, 0, 0, 0, 0, 38, -3.8147e-06, 0, 0, 0, 0, 38, 16, 0, 0, 0, 0, 30, 35, 0, 0, 0, 0, 17, 45, 0, 0, 0, 0, 0, 49, 0, 0, 0, 0, -9, 48, 0, 0, 0, 0, -17, 47, 0, 0, 0, 0, -28, 42, 0, 0, 0, 0, -36, 33, 0, 0, 0, 0, -41, 17, 0, 0, 0, 0, -42, 2, 0, 0, 0, 0, -37, -12, 0, 0, 0, 0, -32, -21)
}
point_count = 22

[node name="Char1" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_whs7d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(213, 54)
scale = Vector2(2, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_5pnns")
animation = &"walk_up"
frame_progress = 0.800048

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dc2r3")
script = ExtResource("2_1dlhc")

[node name="SwordDown" type="Area2D" parent="."]
position = Vector2(0, 65)
script = ExtResource("9_prmj0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordDown"]
position = Vector2(0.25, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_4ebxs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SwordDown"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_i0xve")
animation = &"right_attack"

[node name="Timer" type="Timer" parent="SwordDown"]
wait_time = 0.4

[node name="SwordPath" type="Path2D" parent="."]
position = Vector2(0, 3.8147e-06)
curve = SubResource("Curve2D_3sbyk")

[node name="SwordLocation" type="PathFollow2D" parent="SwordPath"]
position = Vector2(-32, -21)
rotation = -1.05165

[connection signal="area_entered" from="SwordDown" to="." method="_on_sword_down_area_entered"]
[connection signal="body_entered" from="SwordDown" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="SwordDown" to="." method="_on_sword_down_body_shape_entered"]
[connection signal="timeout" from="SwordDown/Timer" to="SwordDown" method="_on_timer_timeout"]
